[gd_scene load_steps=2 format=3 uid="uid://bq833l1svhnh7"]

[ext_resource type="Script" uid="uid://b8x4lam2p7n3" path="res://scripts/ControllerSettings.gd" id="1"]

[node name="ControllerSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controller Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ControllerStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ðŸŽ® No controller connected"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VibrationContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VibrationLabel" type="Label" parent="VBoxContainer/VibrationContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Vibration:"

[node name="VibrationToggle" type="CheckButton" parent="VBoxContainer/VibrationContainer"]
layout_mode = 2
button_pressed = true

[node name="VibrationStrengthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StrengthLabel" type="Label" parent="VBoxContainer/VibrationStrengthContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Strength:"

[node name="StrengthSlider" type="HSlider" parent="VBoxContainer/VibrationStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.5

[node name="DeadzoneContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DeadzoneLabel" type="Label" parent="VBoxContainer/DeadzoneContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Deadzone:"

[node name="DeadzoneSlider" type="HSlider" parent="VBoxContainer/DeadzoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.5
step = 0.05
value = 0.2

[node name="TestVibrationButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Vibration"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Supported controllers:
â€¢ Xbox One/Series
â€¢ PlayStation 4/5
â€¢ Nintendo Switch Pro
â€¢ Generic gamepads"
horizontal_alignment = 1
autowrap_mode = 2
